--- a/css/style.css
+++ b/css/style.css
@@ -17,10 +17,9 @@ body > input[type="radio"] {
 }
 
 .site-wrapper {
-  
   background-repeat: no-repeat;
-  background-position: 75px top ;
-  transition: background-image 0.5s ease, background-color 0.5s ease;
+  background-position:top center;
+  transition: all 0.5s ease;
 }
 
 .site-wrapper::before,
@@ -39,8 +38,9 @@ body > input[type="radio"] {
 
 .content-wrapper {
   width: 1200px;
-  padding: 10px 100px;
+  padding: 0px 20px;
   margin: 0 auto;
+  padding-top: 9px;
 }
 
 .main-header {
@@ -61,7 +61,13 @@ body > input[type="radio"] {
   width: 540px;
 }
 
+.first-menu>a {
+  color: rgba(255, 255, 255, 0.3);
+}
 
+.menu-link {
+  color: #ffffff;
+}
 
 .main-navigation > ul {
   position: relative;
@@ -71,8 +77,7 @@ body > input[type="radio"] {
   padding-left: 0;
   margin-left: ;
   width: 370px;
-  list-style: none;
- 
+  list-style: none; 
 }
 
 .active::before {
@@ -89,8 +94,7 @@ body > input[type="radio"] {
   background: -webkit-linear-gradient(top, #f26843 0%, #e74a35 100%);
   background:         linear-gradient(to bottom, #f26843 0%, #e74a35 100%);
   border-radius: 20px;
-  box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
-  
+  box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);  
 }
 
 .first-menu {
@@ -107,14 +111,15 @@ body > input[type="radio"] {
 
 .first-menu > a:hover {
   box-sizing: border-box;
-  
   text-decoration: none;
   border: 1px solid #323232;
   border-radius: 25px;
   background-color: rgb(248, 247, 244);
-  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
   padding: 10px;
   margin: 0;
+}
+
+.first-menu  span:hover {
   color: #323232;
 }
 
@@ -133,6 +138,8 @@ body > input[type="radio"] {
 
 .main-navigation .sub-menu {
   position: absolute;
+  top: 35px;
+  left: -10px;
   display: none;  
   list-style: none;
   padding: 10px 0;  
@@ -159,6 +166,7 @@ body > input[type="radio"] {
 
 .first-menu:hover  .sub-menu {
 	display: block;
+    z-index: 100;
 }
 .sub-menu li:hover {
   background-color: #fbded7;
@@ -174,7 +182,7 @@ body > input[type="radio"] {
   flex-direction: column;
   align-items: flex-end;
   margin-top: 12px;
-  min-width: 260px;
+  min-width: 270px;
 }
 
 .user-block {
@@ -187,20 +195,21 @@ body > input[type="radio"] {
   font-size: 16px;
   line-height: 18px;
 }
+
 .user-block .users {
   text-decoration: none;
-  background-color: #9db1a5;
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
  .user-block .user-search {
   display: inherit; 
   position: relative;
+  left: -8px; 
   font-size: 0;
   padding-left: 0;
   margin-right: 0;
   width: 32px;
   height: 32px;
-  background-color: #9db1a5;
   border-radius: 50%;
 }
 
@@ -221,8 +230,8 @@ body > input[type="radio"] {
 
 .search-wrapper .search-form {
   position: absolute;
-  top: 30px;
-  left: -340px; 
+  top: 40px;
+  left: -345px; 
   display: none;
   min-width: 340px;  
   padding: 20px;
@@ -278,7 +287,7 @@ input[type="search"]:focus + label {
 
 .search-wrapper:hover .user-form {
   position: absolute;
-  top: 0;
+  top: 0px;
   left: 0;
   display: block;
   width: 440px;
@@ -288,6 +297,7 @@ input[type="search"]:focus + label {
 .user-block .login {
   position: relative;
   display: inherit;
+  left: -8px;
   padding: 7px 10px 7px 40px;
   margin-left: 10px;
   border-radius: 20px;
@@ -323,8 +333,8 @@ input[type="search"]:focus + label {
 
 .login-wrapper .login-form {
   position: absolute;
-  top: 30px;
-  left: -200px; 
+  top: 40px;
+  left: -210px; 
   display: none;
   max-width: 280px;  
   padding: 20px;
@@ -354,7 +364,7 @@ input[type="search"]:focus + label {
 }
 
 .login-email,
-.login-form input[type="password"] {
+.login-pas {
   width: 240px;
   height: 40px;
   border: 1px solid #d3d3d2; 
@@ -385,18 +395,19 @@ input[type="search"]:focus + label {
 }
 
 .login-email:hover,
-.login-form input[type="password"]:hover { 
+.login-pas:hover { 
    border: 3px solid #d3d3d2; 
   padding: 0px;
   
 }
 
 .login-email:focus,
-.login-form input[type="password"]:focus{
+.login-pas:focus {
   border: 2px solid #8fbdec; 
+  padding: 0px;
 }
 
-login-email:focus + label { 
+.login-email:focus + label { 
   position: absolute;
   top: 5px;
   left: 30px;
@@ -405,7 +416,7 @@ login-email:focus + label {
   color: #8fbdec;
 }
 
-input[type="password"]:focus + label{ 
+.login-pas:focus + label { 
   position: absolute;
   top:70px;
   left: 30px;
@@ -475,8 +486,8 @@ input[type="password"]:focus + label{
 .basket-of-goods {
   display: none;
   position: absolute;
-  top: 30px;
-  left: -350px;
+  top: 40px;
+  left: -265px;
   min-width:  540px;
   min-height: 250px;
   background-color: #ffffff;
@@ -487,7 +498,7 @@ input[type="password"]:focus + label{
   z-index: 333;
 }
 
-.table-goods{
+.table-goods {
   display: table;
   border-bottom: 2px solid #cacac7;
 }
@@ -501,14 +512,14 @@ input[type="password"]:focus + label{
   list-style: none;
 }
 
-.table-goods{
+.table-goods {
   margin: 20px;
   margin-top: 30px;
   margin-left: 30px;
   padding-bottom: 30px;
 }
 
-.closed{
+.closed {
   position: relative;
   left: 5px;
   opacity: 20%;
@@ -589,7 +600,7 @@ input[type="password"]:focus + label{
   position: relative;
   width: 180px;
   padding: 0;
-  left: 5px;
+  left:-1px;
   margin-top: 5px;  
 }
 
@@ -601,31 +612,24 @@ input[type="password"]:focus + label{
 }
 
 .user-info a {
+  position: relative;
+  left: 5px;
   font-size: 22px;
   line-height: 24px;
   font-size: 22px;
   text-decoration: none;
 }
 
-.user-info a:hover {
-  color: #ffbc9e;
-}
-
-.user-info a:active {
-  color: #ffbc9e;
-}
-
-
 .search-form,
 .login-form {
   display: none;
 }
 
-main{
+main {
   width: 1146px;
 }
 
-.elevator{
+.elevator {
   position: relative;
   top: -24px;
  
@@ -633,7 +637,7 @@ main{
 
 .slider {
   position: relative;
-  padding-top: 274px;
+  padding-top: 270px;
   text-align: center;
   color: #ffffff;
 }
@@ -645,8 +649,8 @@ main{
 .slide-title {
   width: 700px;
   margin: 0 auto;
-  margin-bottom: 30px;
-  font-weight: bold;
+  margin-bottom: 35px;
+  font-weight: 800;
   font-size: 60px;
   line-height: 60px
 }
@@ -654,7 +658,7 @@ main{
 .slide-btn {
   display: inline-block;
   padding: 12px 50px;
-  font-weight: bold;
+  font-weight: 600;
   font-size: 31px;
   line-height: 41px;
   vertical-align: top;
@@ -686,7 +690,7 @@ main{
 
 .slider-controls {
   position: absolute;
-  bottom: 65px;
+  bottom: 62px;
   left: 0;
   font-size: 0;
   z-index: 20;
@@ -713,6 +717,7 @@ main{
 #btn-1:checked ~ .site-wrapper {
   background-color: #849d8f;
   background-image: url("../img/ice_main.png");
+  
 }
 
 #btn-2:checked ~ .site-wrapper {
@@ -734,7 +739,7 @@ main{
 .promotional-offers {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 
 }
 
@@ -796,6 +801,7 @@ main{
   width: 560px;
   height: 230px;
   background:url('../img/raspberry_bg.jpg') no-repeat;
+  background-size: cover;
   border-radius:15px;
 }
 
@@ -804,6 +810,7 @@ main{
   height: 230px;
   background: url('../img/chocolate-bg.jpg') no-repeat;
   border-radius: 15px;
+  background-size: cover;
 }
 
 .promotional-item {
@@ -821,7 +828,8 @@ main{
   display:flex;
   justify-content: space-between;
   margin-bottom: 20px;
-   width: 1146px;
+  margin-left: -10px;
+  width: 1146px;
 }
 
 
@@ -831,31 +839,28 @@ main{
   margin-bottom: 50px;
 }
 
-.fourth{
-  margin-right: 20px;
+.fourth {
+  margin-right: -10px;
   margin-bottom: 20px;
 }
 
-.margin-none{
+.margin-none {
   margin-right: 0;
 }
 
 .catalog-item {
   position: relative;
   width: 267px;
-  margin-right: 20px;  
+  margin-right: 10px; 
+  padding-left: 10px;
+  padding-right: 10px;
+  border-radius: 5px 5px 0 0;
 }
 
-.catalog-item:hover::after {
-  content: "";
-  position: absolute;
-  
-  top: 0;
-  left: 0;
- 
-  padding: 200px 140px;
+.catalog-item:hover {
   background-color: rgba(255, 255, 255, 0.3);
 }
+
 
 .catalog-item:last-child {
   margin-right: 0;
@@ -864,15 +869,17 @@ main{
 .catalog-item img {
   padding: 0;
   margin: 0;
+  margin-top: 10px;
   border-radius: 50%;
   margin-bottom: -11px;	
 }
 
 .catalog-item .price {
   position: absolute;
-  top: 203px;
-  left: 0;
-  font-size: 45px;                    
+  top: 213px;
+  left: 10px;
+  font-size: 45px;  
+  text-shadow: 0px 1px 3px rgba(49, 50, 53, 1);
 }
 
 .price .units {
@@ -887,6 +894,8 @@ main{
 	
 .hit::before {
   position: absolute;
+  top: 10px;
+  left: 0px;
   content: "";  
   width: 61px;
   height: 61px;
@@ -895,16 +904,56 @@ main{
 }
 
  .purchase-link {
-  font-size: 16px;
-  line-height: 22px;
-  color: #ffffff;
+   width: 120%;
+  color: rgba(255, 255, 255, 0.3);
   margin-bottom: -10px;
   padding-bottom: 0;
 }  
 
+.purchase-link span {
+  color: rgba(255, 255, 255, 1);
+  font-size: 16px;
+  line-height: 22px;
+}
+
+ .purchase-link:hover {
+  color: rgba(232, 77, 55, 0.3); 
+}  
+
+.purchase-link:hover span{
+   color: rgba(232, 77, 55, 1); 
+}
+
+.purchase-link:active {
+  color: rgba(232, 77, 55, 0.3); 
+}  
+
+.purchase-link:active span {
+   color: rgba(232, 77, 55, 1); 
+}
+
+.quick-view-wrap {
+  position: relative;;
+}
+
 .quick-view {
   position: absolute;
-  bottom: -50px;
+  top: -px;
+  left: -10px;
+  display: none;
+  font-size: 1px;
+  background-color: rgba(255, 255, 255, 0.3);
+  color: rgba(255, 255, 255, 0.3);
+  padding: 30px 58px;
+  padding-left: 225px;
+  border-radius: 0 0 5px 5px;
+}
+
+.quick-view::before {
+  content: "Быстрый просмотр";
+  position: absolute;
+  top: -10px;
+  left: 40px;  
   display: none;
   text-decoration: none;
   font-size: 18px;
@@ -916,17 +965,17 @@ main{
   box-shadow: 0 2px 2px rgba(172, 16, 0, 1);
   color: #ffffff;
   border-radius: 50px;
-  padding: 12px 18px;
+  padding: 10px 15px;
   padding-right: 22px;
-  margin-left: 20px;
-  margin-right: 20px;
+ 
 }
 
 
 
-.catalog-item:hover .quick-view {
+.catalog-item:hover .quick-view,
+.catalog-item:hover .quick-view::before {
   display: block;
-  z-index: 200;
+ 
 }
 
 .our-production {
@@ -1058,8 +1107,15 @@ main{
   font-size: 24px;
   line-height: 30px;
   font-weight: bold;
-  color: #323232;
-  
+  color: #323232; 
+}
+
+.blog-info a:hover {
+  color: #e84d37;
+}
+
+.blog-info a:active {
+  color: #e84d37;
 }
 
 .blog-wrapper {
@@ -1163,6 +1219,7 @@ main{
 .our-adress p {
   margin-bottom: 0;
   padding-bottom: 0;
+  margin-left: -5px;
 }
 
 .our-adress p:first-child {
@@ -1206,7 +1263,7 @@ main{
   box-shadow: 0 2px 2px 0 rgba(172, 16, 0, 0.64);
   border-radius: 50px;
   padding: 10px 25px;
-  margin-left: 8px; 
+  margin-left: 3px; 
 }
 
 .about-us .feedback-btn:hover {
@@ -1566,7 +1623,7 @@ range-filter {
   left: 40px;
 }
 
-.max-price{
+.max-price {
   position: absolute;
   top: -30px;
   left: 120px;
@@ -1649,7 +1706,7 @@ range-filter {
   margin-right: 25px;
 }
 
-.sorting-fillers .check-marg-two{
+.sorting-fillers .check-marg-two {
   margin-right: 30px;
 }
 
@@ -1801,23 +1858,45 @@ range-filter {
 .main-footer {
   display: flex;
   justify-content: space-between;
-  background-color: #849d8f;
-  padding-top: 10px; 
+  background-color: transparent;
+  padding-top: 5px; 
   color: #ffffff; 
-  width: 1146px;; 
+  width: 1200px;; 
   min-height: 100px;
-  padding-left: 0;
+  padding-left: 5px;
   margin: 0;
   
 }
-.main-footer a:hover {
-  color: #ffbc9e;
+
+.main-footer a {
+  color: rgba(255, 255, 255, 0.3);
 }
 
-.main-footer a:active {
-  color: rgb(255, 188, 158);
+.main-footer span {
+  color: rgba(255, 255, 255, 1);
+}
+.doc-item:hover,
+.btn-text:hover {
+  color: rgba(232, 77, 55, 0.3); 
+}  
+
+.doc-item:hover span,
+.btn-text:hover span {
+   color: rgba(232, 77, 55, 1); 
+}
+.footer-social h3 {
+  display: none;
 }
 
+.doc-item:active,
+.btn-text:active {
+  color: rgba(232, 77, 55, 0.3); 
+}  
+
+.doc-item:active span,
+.btn-text:active span {
+   color: rgba(232, 77, 55, 1); 
+}
 .footer-social h3 {
   display: none;
 }
@@ -1827,56 +1906,58 @@ range-filter {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  margin-right: 65px;
+  margin-right: 25px;
 }
 
 .social {
-  position:relative;
+  position: relative;
+  top: 5px;
   font-size: 0;
   width: 32px;
   height: 32px;
-  background-color: #849d8f;
+  background-color: transparent;
   border-radius: 50%;
-  border: 2px solid #dae2de;
+  background: url("../img/sprite.png") no-repeat -903px -19px;
+  border: 2px solid #c2cec7;
 }
 
 .social-tw {
-  background:url("../img/sprite.png") no-repeat -903px -19px;    
+  background-position: -903px -20px;    
   margin-left: 0;
   margin-right: 10px;
 }
 
 .social-tw:hover {
-  background: url("../img/sprite.png") no-repeat -1016px -10px;    
+  background-position: -1017px -10px;    
 }
 
 .social-inst {
-  background: url("../img/sprite.png") no-repeat -640px -19px;
+  background-position: -640px -20px;
   margin-right: 10px;
 }
 
 .social-inst:hover {
-  background: url("../img/sprite.png") no-repeat -61px -10px;
+  background-position: -62px -10px;
 }
 
 .social-fb {
     
-  background: url("../img/sprite.png") no-repeat -356px -19px ;
+  background-position: -356px -20px ;
   margin-right: 10px;
 }
 
 .social-fb:hover {
-  background: url("../img/sprite.png") no-repeat -9px -10px ;
+  background-position: -10px -10px ;
 }
 
 .social-vk {
-  background: url("../img/sprite.png") no-repeat -955px -19px;
+  background-position: -955px -20px;
   margin-right: 0;
    
 }
 
 .social-vk:hover {
-  background: url("../img/sprite.png") no-repeat -1069px -10px ;
+  background-position: -1069px -10px ;
 }
 
 .social:active {
@@ -1888,16 +1969,16 @@ range-filter {
   flex-wrap: wrap;
   flex-direction: column;
   justify-content: space-between;
-  width: 360px; 
+  width: 330px; 
   height: 40px;
   margin-right: 2px;
+  
 }
 
 .doc-item {
   position: relative;
   font-size: 13px;
   line-height: 18px;
-  color: #ffffff;
 }
 
 .for-suppliers::before {
@@ -1910,23 +1991,23 @@ range-filter {
 }
 
 .copyright {
-  width: 200px;
+  width: 190px;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
   align-items: flex-start;
+  margin-right: 67px;
   
 }
 
 .copyright .btn {
    position: relative;
-  bottom: 20px;
+  bottom: 13px;
+  left: 12px;
   margin-bottom: 20px;
   }
 
 .copyright a {
- 
-  color: #ffffff;
   min-width: 190px;    
 }
 
